# fruitful-search

./: .gitignore  AGENTS.md  README.md  USER.md  guia.md  pyproject.toml
.github/workflows/: build-embeddings.yml  deploy-pages.yml
config/: compatibility.example.yaml  compatibility.yaml  settings.example.yaml  synonyms.example.yaml  synonyms.yaml
core/: cli.py  db.py
devlog/: 2025-08-29-heliotrope-cuddlebear.md  2025-08-29-pitch-1-minimal-tui.md  2025-08-29-system-design.md  2025-08-30-intense-franklin.md  2026-02-06-vite.md  2026-02-07-semantic-web-worker-debug.md  pitch-enhance-workflow.md  pitch-guide.md  pitch-template.md
docs/devlog/: 2025-08-29-backgrounder.md  2025-08-29-compliance.md  2025-08-29-data-source.md  2025-08-29-filters-constraints.md  2025-08-29-output-ux.md  2025-08-29-project-logistics.md  2025-08-29-quality-evaluation.md  2025-08-29-query-types.md  2025-08-29-ranking-relevance.md
issues/: README.md  default.jsonl  filters-explainability.jsonl  github-pages.md  help-page.jsonl  inspire-mode.jsonl  mvp-browser-search.jsonl  pwa-offline-polish.jsonl  semantic-search.jsonl
prototype/: README.md  read_pcf8591_dual.py  read_pcf8591_dual_ft232h.py  read_pcf8591_dual_mcp2221.py
scripts/: build_index.py  derive_from_device_registry.py  download_adafruit_catalog.py  generate_embeddings.py  ingest_catalog.py  issue.py  refresh_stock.py  search.py  update_catalog_and_indexes.py
tests/: test_cli.py
tui/: __main__.py  app.py  main.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  catalog.ts  categories.ts  (+9 more)
(+2 files in other folders)
