[project]
name = "fruitful-search"
version = "0.0.1"
description = "TUI assistant to search Adafruit's catalog with hybrid lexical+semantic ranking"
readme = "README.md"
requires-python = ">=3.11"

# Core runtime deps are intentionally minimal for now.
dependencies = [
    "textual>=0.89.1",
]

[project.scripts]
fruitful-search = "tui.__main__:main"

[project.optional-dependencies]
tui = [
  "textual>=0.50,<1",
  "rich>=13,<14",
]
index = [
  "faiss-cpu>=1.7,<2",
  "numpy>=1.26,<3",
]
ingest = [
  "pandas>=2.2,<3",
  "pyarrow>=15,<19",
]
dev = [
  "ruff>=0.4",
  "black>=24",
  "mypy>=1.8",
  "pytest>=8",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "tui"]
